--- a/ServerManager/My Project/Resources.resx
+++ b/ServerManager/My Project/Resources.resx
@@ -2638,6 +2638,18 @@
   <data name="Worldwater" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Worldwater.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bukkit_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bukkit_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SpongeIcon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SpongeIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="close32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\close32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Drought" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Drought.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="bukkit1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAMAMDAAAAEAIACoJQAANgAAACAgAAABACAAqBAAAN4lAAAQEAAAAQAgAGgEAACGNgAAKAAAADAA
@@ -2894,17 +2906,8 @@
         AAAAAAAAAAAAAAAAAAAAAAAAgAEAAPAPAAA=
 </value>
   </data>
-  <data name="nukkitPlguinDefault" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\nukkitPlguinDefault.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="close32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\close32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Drought" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Drought.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bukkit" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bukkit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Run32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Run32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Luck" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Luck.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -2915,26 +2918,20 @@
   <data name="showDir" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\showDir.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Run32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Run32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bukkit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bukkit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="nukkitPlguinDefault" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\nukkitPlguinDefault.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bukkit_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bukkit_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="SpongeIcon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SpongeIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Setting32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Setting32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="CFLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CFLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Stone" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Stone.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Setting32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Setting32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="IconTemplate" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IconTemplate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -2945,19 +2942,40 @@
   <data name="anvil" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\anvil.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Stop32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Stop32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Chaos" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Chaos.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="server" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\server.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Stop32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Stop32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="ServerDefaultIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ServerDefaultIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="addcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\addcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="add" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAEnSURBVEhLtdXNTcQwEAXgCIFEE4g2aGgL4IbEgQs0sGfOnOmACmgEmuB9UVZilzhxFs2TnmTZ
+        M2+c+XGGDlyGd+EufJxobc/Z2bgN9+F3+Bm+hs8Tre05Y8O2GxfhQ/gVErsJW3DGhi0fvou4Dt/Dj3BJ
+        +BRs+fClMQvRGbyF5+T2KuRLY/ZLfKJb/KdwgtCgdQRFksctaWmBBq2jwusExVrD/cQ1vIQ0R0iJduu5
+        /dPENdCiOabbwOjpHvQGAJq0x6k0OD3YEoAm7XH0W/mX74Mo6hD8vdeqCU3a9QHKU1Re5PI2hdJBg/Kn
+        AkofOyh/rqH0h3OA6D5RHhV+KZAzBWXLp3nzOSiSTtBuetrgCIjW9pyx+VPQLVAPA2MqjT5a21up1TD8
+        ABahVvx1j0SVAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="chest" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAEHSURBVEhL7VKxDoJQEHsxDAyGGAdD4mJYTBzYnDTA4uDs4O6XuLr7v9qaiuAhhAg6aJPmeNfe
+        9SG6jyDLsksf1Po84NgxbYCOb+NHA6D7aZrGqEO1XoK7uFPH+gD0Q+lVDGUrAX0bgNudUMdFStuAD7PA
+        HmZ2d2+R2mXeoJay5qjyPFPW/DZn1DnqllXPa/BQMguaOdBT8N9mUbnLvIH5Buh5MK+k+2q7JElG7Enz
+        1M6BXquPHFHH0inqAOS/iTfmTCRbCei3CgioI2ABTsAZqZlAthK4i7qO9QGEdEPJBtBaB4T4Wfa4+RI1
+        5jN7kg24izt1bA5oi39AI74X0DFNQOfU+j7h3BXnJl/X3b0ShAAAAABJRU5ErkJggg==
+</value>
   </data>
 </root>
